# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
tasks/: qa.yaml  setup.yaml
